<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity_Chat">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="@color/main_theme">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/freeChatText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_chat"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/toolBar"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/main_theme"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorHeight="3dp"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="#77A3A7">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/chats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chats" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/calls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calls" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabToolbar"
        android:layout_marginTop="0dp">

    </androidx.viewpager.widget.ViewPager>

</RelativeLayout>