<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_theme"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_VerifyYourNumberHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_verify_your_number"
        android:textSize="20sp"
        android:textColor="@color/main_theme"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_messageToUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_text"
        android:layout_below="@+id/tv_VerifyYourNumberHeading"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:padding="5dp"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <com.hbb20.CountryCodePicker
        android:id="@+id/countryCodePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_messageToUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/backgroundshapes"
        app:ccp_areaCodeDetectedCountry="true"
        app:ccp_autoDetectCountry="true" />

    <EditText
        android:id="@+id/getPhoneNumber"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/countryCodePicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/backgroundshapes"
        android:hint="@string/enter_your_number"
        android:inputType="number"
        android:textColor="@color/black"
        android:maxLength="10"
        android:textAlignment="center"
        tools:ignore="TextFields" />

    <android.widget.Button
        android:id="@+id/send_otpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/getPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/backgroundshapes"
        android:backgroundTint="@color/main_theme"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/send_otp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressbarMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/send_otpBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:visibility="invisible"/>

</RelativeLayout>