<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SetProfile">

    <TextView
        android:id="@+id/tv_saveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_your_profile"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/main_theme"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/saveID_DP"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_saveProfile"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="140dp">

        <ImageView
            android:id="@+id/getUserImageInImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/et_UserName"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_below="@+id/saveID_DP"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_user_name"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="18sp"/>

    <android.widget.Button
        android:id="@+id/saveIdBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@color/main_theme"
        android:layout_below="@+id/et_UserName"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

    <ProgressBar
        android:id="@+id/progressbarSaveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saveIdBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>


</RelativeLayout>