<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_theme"
    tools:context=".OTP_Verification">

    <TextView
        android:id="@+id/tv_verifyOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_verify_your_number"
        android:textSize="20sp"
        android:textColor="@color/main_theme"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/iv_OTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_verifyOTP"
        android:src="@drawable/ic_launcher_background"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/tv_msgOTP"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_OTP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/check_otp"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/getOtp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_msgOTP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:maxLength="6"
        android:textColor="@color/black"
        android:background="@drawable/backgroundshapes"
        android:hint="Please Enter the OTP"
        android:textAlignment="center"
        android:padding="5dp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.widget.Button
        android:id="@+id/verifyOTPBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/getOtp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/backgroundshapes"
        android:backgroundTint="@color/main_theme"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/verify_otp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/changeNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/verifyOTPBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/change_number"
        android:textAlignment="center"
        android:textColor="#6b6969"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBarOTP_Verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/changeNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="invisible"
        android:layout_marginBottom="20dp" />

</RelativeLayout>